# reddit-sentiment-notebooks

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-core.txt  requirements.txt
config/: .env.example
notebooks/: 02_subreddit_sentiment.ipynb
reddit_tool/: __init__.py  __main__.py  analyze.py  auth.py  cli.py  client.py  config.py  io_utils.py  notebook_gen.py  plotting.py  sentiment.py  text_clean.py
src/: fetch_reddit.py  reddit_client.py  sentiment.py  utils.py
tests/: __init__.py  test_ngrams.py  test_text_clean.py
